experimental/parser/testdata/parser/type/generic_broken.proto.stderr.txt
error: missing name in message field
  --> testdata/parser/type/generic_broken.proto:20:5
   |
20 |     map<string, string x1 = 1;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected exactly two type arguments, got 3
  --> testdata/parser/type/generic_broken.proto:20:8
   |
20 |     map<string, string x1 = 1;
   |        ^

error: unexpected type name in type parameters
  --> testdata/parser/type/generic_broken.proto:20:24
   |
20 |     map<string, string x1 = 1;
   |                        ^^ expected `,`
   |                        - note: assuming a missing `,` here
   |
  help: add a `,` here
   |
20 |     map<string, string, x1 = 1;
   |                       +

encountered 3 errors
